profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_1/run_6_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci, input size: 30
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 30; module.fibonacci(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 11.360692062377929 for 0.23563789 sec of execution.
